added licensing information

--- a/css/a11ycharts.css
+++ b/css/a11ycharts.css
@@ -1,8 +1,13 @@
 /**
- * Styling for accessible bar charts
+ * a11yChart CSS styling
  *
- * @author     Paul Rentschler <paul@rentschler.ws>
- * @since      31 January 2014
+ * CSS styling for accessible bar charts
+ *
+ *
+ * Copyright 2014 Paul Rentschler
+ * Released under the MIT license
+ *
+ * Date: 2014-01-31
  */
 
 
