--- a/css/a11ycharts.css
+++ b/css/a11ycharts.css
@@ -98,6 +98,7 @@
 /*ul*/.a11ychart.timeline {
     font-size: 0.75em;
     height: 10em;
+    overflow: hidden;
 }
 
 /*ul*/.a11ychart.timeline li {
